// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`EC - Datepicker renders correctly 1`] = `
<test>
  <div
    class="ecl-form-group"
  >
    <label
      class="ecl-form-label"
      for="example-input-id-1"
    >
      Label    
      <span
        class="ecl-form-label__required"
      >
        *
      </span>
    </label>
    <div
      class="ecl-help-block"
    >
      This is the input's helper text.
    </div>
    <div
      class="ecl-datepicker"
    >
      <input
        class="ecl-datepicker__field ecl-text-input ecl-text-input--s"
        data-ecl-auto-init="Datepicker"
        data-ecl-datepicker-toggle=""
        id="example-input-id-1"
        name="example-input-id-1"
        placeholder="DD-MM-YYYY"
        required=""
        type="text"
      />
      <svg
        aria-hidden="true"
        class="ecl-icon ecl-icon--s ecl-datepicker__icon"
        focusable="false"
      >
        <use
          xlink:href="/icons.svg#general--calendar"
        />
      </svg>
    </div>
  </div>
</test>
`;

exports[`EC - Datepicker renders correctly with extra attributes 1`] = `
<test>
  <div
    class="ecl-form-group"
  >
    <label
      class="ecl-form-label"
      for="example-input-id-1"
    >
      Label    
      <span
        class="ecl-form-label__required"
      >
        *
      </span>
    </label>
    <div
      class="ecl-help-block"
    >
      This is the input's helper text.
    </div>
    <div
      class="ecl-datepicker"
      data-test="data-test-value"
      data-test-1="data-test-value-1"
      null=""
    >
      <input
        class="ecl-datepicker__field ecl-text-input ecl-text-input--s"
        data-ecl-auto-init="Datepicker"
        data-ecl-datepicker-toggle=""
        id="example-input-id-1"
        name="example-input-id-1"
        placeholder="DD-MM-YYYY"
        required=""
        type="text"
      />
      <svg
        aria-hidden="true"
        class="ecl-icon ecl-icon--s ecl-datepicker__icon"
        focusable="false"
      >
        <use
          xlink:href="/icons.svg#general--calendar"
        />
      </svg>
    </div>
  </div>
</test>
`;

exports[`EC - Datepicker renders correctly with extra class names 1`] = `
<test>
  <div
    class="ecl-form-group"
  >
    <label
      class="ecl-form-label"
      for="example-input-id-1"
    >
      Label    
      <span
        class="ecl-form-label__required"
      >
        *
      </span>
    </label>
    <div
      class="ecl-help-block"
    >
      This is the input's helper text.
    </div>
    <div
      class="ecl-datepicker custom-class custom-class--test"
    >
      <input
        class="ecl-datepicker__field ecl-text-input ecl-text-input--s"
        data-ecl-auto-init="Datepicker"
        data-ecl-datepicker-toggle=""
        id="example-input-id-1"
        name="example-input-id-1"
        placeholder="DD-MM-YYYY"
        required=""
        type="text"
      />
      <svg
        aria-hidden="true"
        class="ecl-icon ecl-icon--s ecl-datepicker__icon"
        focusable="false"
      >
        <use
          xlink:href="/icons.svg#general--calendar"
        />
      </svg>
    </div>
  </div>
</test>
`;

exports[`EC - Datepicker with misssing input data and debug enabled it returns the right warning messages. 1`] = `
<test>
  <div
    class="ecl-form-group"
  >
    <div
      class="ecl-help-block"
    >
      This is the input's helper text.
    </div>
    <div
      class="ecl-datepicker"
    >
      <input
        class="ecl-datepicker__field ecl-text-input ecl-text-input--s"
        data-ecl-auto-init="Datepicker"
        data-ecl-datepicker-toggle=""
        id="example-input-id-1"
        name="example-input-id-1"
        placeholder="DD-MM-YYYY"
        required=""
        type="text"
      />
    </div>
  </div>
  <!-- ecl2-compliance: form-group -->
  <div
    class="ecl2-compliance ecl-u-border-width-1 ecl-u-border-color-red ecl-u-border-style-solid ecl-u-ma-xs ecl-u-pr-s ecl-u-bg-white"
  >
    <p
      class="ecl-u-type-color-grey ecl-u-ml-m ecl-u-type-xs"
    >
      [form-group] - The {{ label }} property needs to set and filled in.
    </p>
  </div>
  <!-- ecl2-compliance: datepicker -->
  <div
    class="ecl2-compliance ecl-u-border-width-1 ecl-u-border-color-red ecl-u-border-style-solid ecl-u-ma-xs ecl-u-pr-s ecl-u-bg-white"
  >
    <p
      class="ecl-u-type-color-grey ecl-u-ml-m ecl-u-type-xs"
    >
      [datepicker] - {{ icons_path }} property needs to be set and filled in as it is needed to retrieve the icons sprite file.
    </p>
  </div>
</test>
`;
